2006-09-05 18:23 nick

	* Bump version to 0.5.99.1 (0.6rc1)
	* Depend on Xfce4-panel 4.3.99.1

2006-09-02 21:33 nick

	* Remove executable bits
	* Update ChangeLog

2006-08-11 08:30 nick

	* Depend on xfce4-panel rev 22703, libxfcegui4 4.3.90.2 and
	  libxfce4util 4.3.90.2
	* Remove the old header code for < 4.3.90.2

2006-08-10 10:23 piarres

	* add xfce4-clipman-plugin basque translation 

2006-08-09 20:48 nick

	* Use new panel_slice_* functions

2006-08-08 19:21 nick

	* Fix compiler warning

2006-08-07 23:58 nick

	* Change version to 0.6 beta 2
	* Fix my own mail

2006-08-07 08:09 nick

	* Patch from Darren Salt <linux@youmustbejoking.demon.co.uk>
	  to use Pango's ellipsize.
	* Added Darren to THANKS file

2006-07-29 22:00 pollux

	* Update French translations

2006-06-21 21:06 nick

	* Raise version number
	* Fix some small problems
	* Fix typo

2006-06-21 20:45 nick

	* Added LINGUAS support
	* Drop a new clip if we can't convert the new title
	* Clear board on exit plugin

2006-06-15 15:02 nick

	* Better way to render the button icon
	* Improve memory usage
	* Various small changes

2006-06-15 09:28 nick

	* Make memory usage a bit saver

2006-06-14 22:29 nick

	* Use g_object_unref (G_OBJECT (...))

2006-06-11 20:04 nick

	* Use the convenience toggle button from libxfce4panel
	* Better way to calculate icon size (from launcher)
	* Free tooltip on plugin exit
	* Use new titled dialog, if available

2006-05-23 07:19 daichi

	* Removed executable bits.

2006-05-22 21:16 nick

	* Added hu to configure

2006-05-22 14:19 satie

	* clipman hu.po

2006-05-21 20:58 nick

	* Improved loops
	* Cleanup some stuff
	* Use guint where possible
	* Some code cleanups

2006-05-17 19:19 nick

	* Removed the "Edit Clip Dialog", since it not usefull enough.
	* Fix memleak in free function
	* Use gboolean instead of guint x:1
	* Some style fixes and var renames

2006-05-15 21:22 nick

	* Fix 2.95 GCC warnings
	* Code cleanup and layout

2006-04-20 15:15 nick
