@@ -1,3 +1,8 @@
+2006-09-05 19:16 nick
+
+	* Improve Makefile.am files. Make distcheck works
+	  without any problems now.
+
 2006-09-05 18:23 nick
 
 	* Bump version to 0.5.99.1 (0.6rc1)
